src/main/resources/devops/k8s_aws/istio/ingress/istio-ingress-webapp.yaml
apiVersion: networking.istio.io/v1alpha3

kind: VirtualService

metadata:
  name: istio-ingress-virtual-service-configuration
  namespace: default
  
spec:
  hosts:
    - fleetman.com
  gateways:
    - istio-ingress-firewall-yoogesh
    
  http:
  
    - match:
      - uri:
          prefix: /
          
      route:
        - destination:
            host: twm-webapp.default.svc.cluster.local
            subset: safe
            port:
              number: 80
          weight: 90
          
        - destination:
            host: twm-webapp.default.svc.cluster.local
            subset: risky
            port:
              number: 80
          weight: 10
