src/main/resources/devops/k8s_aws/istio/ingress/other.yaml
apiVersion: networking.istio.io/v1alpha3

kind: VirtualService

metadata:
  name: istio-ingress-virtual-service-monitor-configuration
  namespace: istio-system
  
spec:
  hosts:
    - monitor.fleetman.com
  gateways:
    - istio-ingress-firewall-yoogesh
    
  http:
  
    - match:
      - uri:
          prefix: /prometheus
      route:
      - destination:
          host: prometheus
          port:
            number: 9090
            
    - match:
      - uri:
          prefix: /kiali
      route:
      - destination:
          host: kiali
          port:
            number: 20001
